# extractor2md

./: .gitignore  README.md  extractor2md.difypkg  manifest.yaml  pyproject.toml  requirements.txt
provider/: extractor2md.yaml
tests/: test_dify_extractor.py  test_extractor2md.py
tools/: dify_extractor.py  excel_extractor.py  extractor2md.py  extractor2md.yaml  helpers.py  html_extractor.py  markdown_extractor.py  pdf_extractor.py  pptx_extractor.py  word_extractor.py
